--- a/META.yml
+++ b/META.yml
@@ -1,19 +1,23 @@
-
+--- 
+abstract: Track the number of times subs are called
+author: 
+  - Adam Kennedy <adamk@cpan.org>
+build_requires: 
+  Test::Builder::Tester: 1.02
+distribution_type: module
+generated_by: Module::Install version 0.68
+license: perl
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
+name: Test-SubCalls
 no_index: 
   directory: 
     - inc
     - t
-generated_by: Module::Install version 0.62
-distribution_type: module
-version: 1.06
-name: Test-SubCalls
-author: Adam Kennedy <cpan@ali.as>
-license: perl
-build_requires: 
-  Test::Builder::Tester: 1.02
 requires: 
-  Test::More: 0.60
-  perl: 5.6.0
   File::Spec: 0.80
   Hook::LexWrap: 0.20
-abstract: Track the number of times subs are called
+  Test::More: 0.60
+  perl: 5.6.0
+version: 1.07
