--- a/META.yml
+++ b/META.yml
@@ -1,23 +1,26 @@
---- 
-abstract: Track the number of times subs are called
-author: 
-  - Adam Kennedy <adamk@cpan.org>
-build_requires: 
+---
+abstract: 'Track the number of times subs are called'
+author:
+  - 'Adam Kennedy <adamk@cpan.org>'
+build_requires:
   Test::Builder::Tester: 1.02
 distribution_type: module
-generated_by: Module::Install version 0.68
+generated_by: 'Module::Install version 0.77'
 license: perl
-meta-spec: 
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+module_name: Test::SubCalls
 name: Test-SubCalls
-no_index: 
-  directory: 
+no_index:
+  directory:
     - inc
     - t
-requires: 
+requires:
   File::Spec: 0.80
   Hook::LexWrap: 0.20
   Test::More: 0.60
   perl: 5.6.0
-version: 1.07
+resources:
+  license: http://dev.perl.org/licenses/
+version: 1.08
