--- a/META.yml
+++ b/META.yml
@@ -3,9 +3,12 @@ abstract: 'Track the number of times subs are called'
 author:
   - 'Adam Kennedy <adamk@cpan.org>'
 build_requires:
+  ExtUtils::MakeMaker: 6.42
   Test::Builder::Tester: 1.02
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.77'
+generated_by: 'Module::Install version 0.85'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,8 +22,10 @@ no_index:
 requires:
   File::Spec: 0.80
   Hook::LexWrap: 0.20
-  Test::More: 0.60
+  Test::More: 0.42
   perl: 5.6.0
 resources:
+  ChangeLog: http://fisheye2.atlassian.com/changelog/cpan/trunk/Test-SubCalls
   license: http://dev.perl.org/licenses/
-version: 1.08
+  repository: http://svn.ali.as/cpan/trunk/Test-SubCalls
+version: 1.09
